--- a/app/src/main/res/layout/fragment_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_f_a_q.xml
@@ -82,7 +82,7 @@
                     app:layout_constraintHeight_percent="0.3"
                     app:layout_constraintStart_toStartOf="@+id/contact2"
                     app:layout_constraintWidth_percent="0.12"
-                    app:srcCompat="@drawable/mask_group_1" />
+                    app:srcCompat="@drawable/delivery2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
