--- a/app/src/main/res/drawable/capsule_button_minus.xml
+++ b/app/src/main/res/drawable/capsule_button_minus.xml
@@ -3,7 +3,7 @@
     <solid android:color="@color/white"/>
     <corners android:bottomRightRadius="18dp"
         android:bottomLeftRadius="18dp"/>
-    <stroke android:width="1dp"
+    <stroke android:width="0dip"
             android:color="@color/black"
         />
 </shape>
