--- a/app/src/main/res/layout/fragment_fill_address.xml
+++ b/app/src/main/res/layout/fragment_fill_address.xml
@@ -3,57 +3,314 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.account.login.FillAddress">
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+
+    tools:context=".ui.account.FillAddress">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F7F7F7"
-        android:paddingBottom="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/type_customer2"
-        app:layout_constraintStart_toStartOf="@+id/type_customer2"
-        tools:context=".ui.account.FillDetailsFragment">
+        android:paddingBottom="40dp">
+
+
+        <TextView
+            android:id="@+id/place"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Place"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/streetname_section" />
+
+        <EditText
+            android:id="@+id/streetname_section"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="28dp"
+            android:background="@drawable/fill_text_back"
+            android:ems="10"
+            android:fontFamily="@font/liberation_sans"
+            android:gravity="start|top"
+            android:inputType="none"
+            android:padding="10dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/full_name"
+            app:layout_constraintTop_toBottomOf="@+id/streetname" />
+
+        <EditText
+            android:id="@+id/place_section"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="28dp"
+            android:background="@drawable/fill_text_back"
+            android:ems="10"
+            android:fontFamily="@font/liberation_sans"
+            android:gravity="start|top"
+            android:inputType="none"
+            android:padding="10dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/full_name"
+            app:layout_constraintTop_toBottomOf="@+id/place" />
+
+        <TextView
+            android:id="@+id/streetname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Streetname"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/house_number_section" />
+
+        <TextView
+            android:id="@+id/your_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="28dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Your Name"
+            android:textColor="#000000"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/account_fill_country"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/liberation_sans_regular"
+            android:text="Romania"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="@+id/your_name"
+            app:layout_constraintStart_toStartOf="@+id/your_name"
+            app:layout_constraintTop_toBottomOf="@+id/your_name" />
+
+        <TextView
+            android:id="@+id/account_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Shipping address"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/account_fill_country" />
+
+        <TextView
+            android:id="@+id/full_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Full Name"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/account_info" />
+
+        <EditText
+            android:id="@+id/fullname_section"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="28dp"
+            android:background="@drawable/fill_text_back"
+            android:ems="10"
+            android:fontFamily="@font/liberation_sans"
+            android:gravity="start|top"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/full_name"
+            app:layout_constraintTop_toBottomOf="@+id/full_name" />
 
         <TextView
             android:id="@+id/postal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/liberation_sans"
-            android:text="Phone number"
+            android:text="Postal"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_section" />
+            app:layout_constraintTop_toBottomOf="@+id/fullname_section" />
 
-        <TextView
-            android:id="@+id/type_customer"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/postal_section"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="28dp"
+            android:background="@drawable/fill_text_back"
+            android:ems="10"
             android:fontFamily="@font/liberation_sans"
-            android:text="Type customer"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="start|top"
+            android:inputType="none"
+            android:padding="10dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/full_name"
             app:layout_constraintTop_toBottomOf="@+id/postal" />
 
         <TextView
-            android:id="@+id/email_section"
+            android:id="@+id/house_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/liberation_sans"
-            android:text="E-mail"
+            android:text="House number"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email" />
+            app:layout_constraintTop_toBottomOf="@+id/postal_section" />
+
+        <EditText
+            android:id="@+id/house_number_section"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="28dp"
+            android:autofillHints=""
+            android:background="@drawable/fill_text_back"
+            android:ems="10"
+            android:fontFamily="@font/liberation_sans"
+            android:gravity="start|top"
+            android:inputType="number"
+            android:padding="10dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/full_name"
+            app:layout_constraintTop_toBottomOf="@id/house_number"
+            app:layout_constraintWidth_percent="0.4"
+            tools:ignore="LabelFor" />
+
+        <TextView
+            android:id="@+id/extra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Extra"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/extra_section"
+            app:layout_constraintTop_toBottomOf="@+id/postal_section" />
+
+        <EditText
+            android:id="@+id/extra_section"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="8dp"
+            android:autofillHints=""
+            android:background="@drawable/fill_text_back"
+            android:ems="10"
+            android:fontFamily="@font/liberation_sans"
+            android:gravity="start|top"
+            android:inputType="number"
+            android:padding="10dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@id/postal_section"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/house_number_section"
+            app:layout_constraintTop_toBottomOf="@id/house_number"
+
+            tools:ignore="LabelFor" />
+
+        <TextView
+            android:id="@+id/country"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/liberation_sans"
+            android:text="Country"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/place"
+            app:layout_constraintTop_toBottomOf="@+id/place_section" />
+
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/country_selector"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/fill_text_back"
+            app:layout_constraintEnd_toEndOf="@+id/place_section"
+            app:layout_constraintStart_toStartOf="@+id/place_section"
+            app:layout_constraintTop_toBottomOf="@+id/country"
+            app:showFlag="true"
+            app:showFullName="true"
+            app:textSize="20sp" />
+
+        <Button
+            android:id="@+id/drop_country"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/ic_baseline_keyboard_arrow_down_24"
+            app:backgroundTint="#000000"
+            app:layout_constraintBottom_toBottomOf="@+id/country_selector"
+            app:layout_constraintEnd_toEndOf="@+id/country_selector"
+            app:layout_constraintTop_toTopOf="@+id/country_selector"
+            app:layout_constraintWidth_percent="0.1" />
+
+        <Button
+            android:id="@+id/save_address"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_gravity="start"
+            android:layout_marginTop="40dp"
+            android:enabled="true"
+            android:fontFamily="@font/lato"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:text="SAVE"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"
+            app:backgroundTint="#292C2F"
+            app:cornerRadius="0dp"
+            app:layout_constraintEnd_toEndOf="@+id/country_selector"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/country_selector"
+            app:layout_constraintTop_toBottomOf="@+id/country_selector"
+            app:rippleColor="#707070" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
