--- a/app/src/main/res/layout/fragment_fill_details.xml
+++ b/app/src/main/res/layout/fragment_fill_details.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:background="#F7F7F7"
         android:paddingBottom="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/type_customer2"
-        app:layout_constraintStart_toStartOf="@+id/type_customer2"
+        app:layout_constraintEnd_toStartOf="@+id/phone_text"
+        app:layout_constraintStart_toStartOf="@+id/phone_text"
         tools:context=".ui.account.FillDetailsFragment">
 
         <TextView
-            android:id="@+id/type_customer2"
+            android:id="@+id/phone_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />
 
         <TextView
-            android:id="@+id/type_customer"
+            android:id="@+id/country"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
@@ -68,9 +68,9 @@
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
-            android:inputType="none"
+            android:inputType="textEmailAddress"
             android:padding="10dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/name_fill"
@@ -85,7 +85,7 @@
             android:fontFamily="@font/liberation_sans"
             android:text="Name"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/account_info" />
@@ -102,10 +102,10 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/account_country3" />
+            app:layout_constraintTop_toBottomOf="@+id/account_fill_country" />
 
         <TextView
-            android:id="@+id/account_name3"
+            android:id="@+id/your_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
@@ -119,7 +119,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/account_country3"
+            android:id="@+id/account_fill_country"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/liberation_sans_regular"
@@ -127,9 +127,9 @@
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="normal"
-            app:layout_constraintEnd_toEndOf="@+id/account_name3"
-            app:layout_constraintStart_toStartOf="@+id/account_name3"
-            app:layout_constraintTop_toBottomOf="@+id/account_name3" />
+            app:layout_constraintEnd_toEndOf="@+id/your_name"
+            app:layout_constraintStart_toStartOf="@+id/your_name"
+            app:layout_constraintTop_toBottomOf="@+id/your_name" />
 
         <EditText
             android:id="@+id/name_section"
@@ -137,14 +137,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="28dp"
-            android:autofillHints="@string/common_google_play_services_enable_button"
             android:background="@drawable/fill_text_back"
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
             android:inputType="none"
             android:padding="10dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/name_fill"
@@ -156,7 +155,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="28dp"
-            android:autofillHints="@string/prompt_email"
             android:background="@drawable/fill_text_back"
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
@@ -167,6 +165,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/name_fill"
+            android:autofillHints=""
             app:layout_constraintTop_toBottomOf="@+id/email_section" />
 
         <TextView
@@ -200,8 +199,8 @@
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@+id/last_name"
-            app:layout_constraintStart_toStartOf="@+id/type_customer"
-            app:layout_constraintTop_toBottomOf="@+id/type_customer"
+            app:layout_constraintStart_toStartOf="@+id/country"
+            app:layout_constraintTop_toBottomOf="@+id/country"
             tools:ignore="LabelFor" />
 
         <Button
@@ -223,17 +222,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/fill_text_back"
-            android:hint=""
-            app:layout_constraintEnd_toEndOf="@+id/autoCompleteTextView"
-            app:layout_constraintStart_toStartOf="@+id/autoCompleteTextView"
-            app:layout_constraintTop_toBottomOf="@+id/type_customer2"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="@+id/last_name"
+            app:layout_constraintStart_toStartOf="@id/autoCompleteTextView"
+            app:layout_constraintTop_toBottomOf="@id/phone_text"
+
             app:phonemoji_flagFor="@id/phonemojiTextInputEditText">
 
             <com.tfcporciuncula.phonemoji.PhonemojiTextInputEditText
                 android:id="@+id/phonemojiTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/fill_text_back"
                 app:phonemoji_initialRegionCode="NL" />
 
         </com.tfcporciuncula.phonemoji.PhonemojiTextInputLayout>
@@ -256,7 +256,7 @@
             android:id="@+id/autoCompleteMonth"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:background="@drawable/fill_text_back"
             android:clickable="true"
             android:dropDownHeight="wrap_content"
@@ -290,7 +290,7 @@
             android:id="@+id/autoCompleteDay"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:background="@drawable/fill_text_back"
             android:clickable="true"
             android:dropDownHeight="wrap_content"
@@ -399,11 +399,13 @@
             app:layout_constraintTop_toBottomOf="@id/password_fill" />
 
         <Button
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
+            android:id="@+id/save_address"
+            android:layout_width="0dp"
             android:layout_height="55dp"
             android:layout_gravity="start"
-            android:layout_marginTop="24dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="80dp"
             android:enabled="true"
             android:fontFamily="@font/lato"
             android:insetTop="0dp"
