--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -47,7 +47,7 @@
             app:layout_constraintTop_toBottomOf="@+id/shipping_address_text" />
 
         <Button
-            android:id="@+id/save"
+            android:id="@+id/save_address"
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:layout_gravity="start"
